# mynotes

./: Cargo.toml  notes.db
src/: main.rs
src/api/: notes.rs
src/model/: note.rs
src/repository/: mod.rs  notes_repo.rs
src/templates/: index.html
