[package]
name = "mynotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="^4"
uuid = {version="^1", features=["v4"]}
serde = {version="^1", features=["derive"]}
serde_json = "1"
env_logger = "0.9.0"
log="^0.4"
strum_macros="^0.24"
strum={version="^0.24", features=["derive"]}
derive_more="^0.99"
chrono = { version = "^0.4", features = ["serde"] }
rusqlite = { version = "0.28.0", features = ["bundled","chrono"] }
